--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -8,32 +8,51 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 0 20px;
+	padding: 0 10px;
 }
 
 .locations {
-	height: 100%;
-	width: 25%;
-	border-right: 1px solid #DDDDDD;
+	border-right: 1px solid #DDDDDD;DDDDDD
+	margin-left: 20px;
 }
 
-.amenities {
+.locations, .amenities {
 	height: 100%;
 	width: 25%;
+	order: 1;
+	text-align: left;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: left;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
-.locations h3
-.amenities h3 {
+/** Media wueey for small screns */
+@media (max-width: 768px) {
+	.locations h4,
+	.amenities h4, {
+
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipis;
+	}
+}
+
+.locations h3, .amenities h3 {
 	font-weight: 600;
+	margin: 0;
 }
 
-.locations h4,
-.amenities h4 {
+.locations h4, .amenities h4 {
 	font-weight: 400px;
 	font-size: 14px;
+	margin: 0;
 }
 
 .search {
+	order: 2;
 	font-size: 18px;
 	background-color: #FF5A5F;
 	color: #FFFFFF;
@@ -48,5 +67,5 @@
 }
 
 .search:hover {
-	opacity: 90%;
+	opacity: 0.9;
 }
